# NSXAI

./: .gitattributes  .gitignore  1_extract_schema.py  2_populate.py  3_csv_to_owl.py  ANALYSE_REGLES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  schema.json
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/reports/: ontology_report.txt
nsxai/: .env  Dockerfile.gnn  README.md  docker-compose.yml
nsxai/gnn/: __init__.py  explainer.py  gnn_model.py  kg_builder.py  pipeline.py  requirements.txt
nsxai/hermit/: Dockerfile  hermit_api_server.py  requirements.txt
nsxai/kg/: kg_builder.py
nsxai/ontologies/: catalog-v001.xml  gado_core.owl  gato.owl  instances.owl  its_domain.owl  its_pedagogical.owl  meututor_domain_curriculum.owl  meututor_stub.owl  owl2ttl.py  sioc_stub.owl
nsxai/ontologies/ttl/: catalog-v001.xml  gado_core.ttl  gato.ttl  instances.ttl  its_domain.ttl  its_pedagogical.ttl  meututor_domain_curriculum.ttl  meututor_domain_resource.ttl  meututor_stub.ttl  sioc_stub.ttl
nsxai/semantic/: hermit_infer.py  owl2ttl.py
ontologies/: catalog-v001.xml  gado_core.owl  gado_full.owl  meututor_domain.owl  meututor_domain_cp.owl  meututor_domain_resource.owl  sioc_stub.owl
output/embeddings/: embeddings.csv  embeddings.json
output/inferred/: gado_core.ttl  gado_full.ttl  gato.ttl  instances.ttl  its_domain.ttl  its_pedagogical.ttl  meututor_domain.ttl  meututor_domain_cp.ttl  meututor_domain_curriculum.ttl  meututor_domain_resource.ttl  sioc_stub.ttl
output/kg/: edges.csv  graph.gexf  graph.graphml  nodes.csv
output/ttl/: gado_core.ttl  gado_full.ttl  gato.ttl  instances.ttl  its_domain.ttl  its_pedagogical.ttl  meututor_domain.ttl  meututor_domain_cp.ttl  sioc_stub.ttl
public/data/knowledge_graph/exports/: instances.gexf  instances.graphml  instances_edges.csv  instances_nodes.csv
public/data/ontologies/ttl/: gado_core.ttl  gado_full.ttl  gato.ttl  instances.ttl  its_domain.ttl  its_pedagogical.ttl
public/ontologies/: catalog-v001.xml  gado_core.owl  gado_full.owl  gato.owl  its.pedagogical.owl  itsdomain.owl  notes.md  temp_gato.owl  temp_its.pedagogical.owl
public/ontologies/documentation/: Analysis.rar
public/ontologies/files/: ONTOLOGY_NETWORK.md  catalog-v001.xml  gado_core.owl  gado_full.owl  gato.owl  instances.properties  its_domain.owl  its_pedagogical.owl
public/ressources/KitDataScientist/: Kit-Data-Scientist.ipynb
src/: __init__.py
src/api/: README.md  __init__.py  config.py
src/core/: README.md  __init__.py
src/core/shared/config/: settings.yaml
src/core/symbolic_layer/ontology_loader/: __init__.py  loader.py
src/scripts/release/: bump_version.py
src/web/: README.md
tests/: __init__.py  conftest.py
tests/unit/: test_ontology_loader.py
