[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsxai"
version = "0.1.0-dev"
description = "Neuro-Symbolic Explainable AI Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "NSXAI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.0.0",
    "py2neo>=2021.2.4",
    "scikit-learn>=1.3.0",
    "optuna>=3.4.0",
    "tensorboard>=2.13.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
    "dvc>=3.30.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "bump-my-version>=0.26.0",
    "sphinx>=7.0.0",
    "mypy>=1.5.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
]
web = [
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]
all = [
    "nsxai[dev,api,web]"
]

[project.urls]
Homepage = "https://github.com/dadflip/NSXAI"
Documentation = "https://nsxai.readthedocs.io"
Repository = "https://github.com/dadflip/NSXAI"
Issues = "https://github.com/dadflip/NSXAI/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/core --cov=src/api --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.1.0-dev"
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"
tag_message = "Release {new_version}"

[[tool.bumpversion.files]]
filename = "VERSION"

[[tool.bumpversion.files]]
filename = "README.md"
search = "**Version:** `{current_version}`"
replace = "**Version:** `{new_version}`"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/core/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/api/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
